--- a/app/src/main/res/menu/activity_login_drawer.xml
+++ b/app/src/main/res/menu/activity_login_drawer.xml
@@ -10,6 +10,12 @@
         <item
             android:id="@+id/nav_setting"
             android:icon="@drawable/settings_black"
-            android:title="Setting" />
+            android:title="Connected Devices" />
+
+        <item
+            android:id="@+id/nav_language"
+            android:icon="@drawable/change_language_icon"
+            android:title="Change Language" />
+
     </group>
 </menu>
