--- a/app/src/main/res/layout/layout_display_record_screen.xml
+++ b/app/src/main/res/layout/layout_display_record_screen.xml
@@ -25,7 +25,7 @@
                 android:src="@mipmap/applogo" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="1249dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="2"
@@ -37,91 +37,91 @@
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
-                    android:gravity="center"
+                    android:layout_margin="@dimen/pad10"
                     android:background="@drawable/repeat"
+                    android:gravity="center"
                     android:padding="@dimen/pad5"
                     android:text="Height Scale"
                     android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:layout_margin="@dimen/pad10" />
+                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_header_height"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad10"
                     android:background="@color/orange4"
-                    android:padding="@dimen/pad5"
                     android:gravity="center"
+                    android:padding="@dimen/pad5"
                     android:text="Weight Scale"
                     android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:layout_margin="@dimen/pad10" />
+                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_header_pulseoximeter"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad10"
+                    android:background="@drawable/repeat"
                     android:gravity="center"
+                    android:padding="@dimen/pad5"
                     android:text="Pulse Oximeter"
                     android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:background="@drawable/repeat"
-                    android:padding="@dimen/pad5"
-                    android:layout_margin="@dimen/pad10" />
+                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_header_bloodpressure"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad10"
+                    android:background="@drawable/repeat"
                     android:gravity="center"
+                    android:padding="@dimen/pad5"
                     android:text="BP Monitor"
                     android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:background="@drawable/repeat"
-                    android:padding="@dimen/pad5"
-                    android:layout_margin="@dimen/pad10" />
+                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_header_tempreture"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:gravity="center"
+                    android:layout_margin="@dimen/pad10"
                     android:background="@drawable/repeat"
-                    android:text="Temperature"
+                    android:gravity="center"
                     android:padding="@dimen/pad5"
+                    android:text="Temperature"
                     android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:layout_margin="@dimen/pad10" />
+                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_header_hemoglobin"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad10"
+                    android:background="@drawable/repeat"
                     android:gravity="center"
+                    android:padding="@dimen/pad5"
                     android:text="Blood Sugar"
                     android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:background="@drawable/repeat"
-                    android:padding="@dimen/pad5"
-                    android:layout_margin="@dimen/pad10" />
+                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_header_bloodsugar"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad10"
+                    android:background="@drawable/repeat"
                     android:gravity="center"
+                    android:padding="@dimen/pad5"
                     android:text="Hemoglobin"
                     android:textColor="@color/white"
-                    android:textSize="20sp"
-                    android:background="@drawable/repeat"
-                    android:padding="@dimen/pad5"
-                    android:layout_margin="@dimen/pad10" />
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
