--- a/app/src/main/res/layout/activity_height_screen.xml
+++ b/app/src/main/res/layout/activity_height_screen.xml
@@ -299,6 +299,7 @@
         android:layout_margin="10dp"
         android:layout_weight=".6"
         android:background="@drawable/repeat"
+        android:baselineAligned="false"
         android:text="NEXT"
         android:textColor="@color/white"
         android:textSize="25sp"
