--- a/app/src/main/res/layout/layout_blood_pressure.xml
+++ b/app/src/main/res/layout/layout_blood_pressure.xml
@@ -261,11 +261,11 @@
 
                         <Button
                             android:id="@+id/btn_skip"
-                            android:layout_width="wrap_content"
-                            android:layout_height="50dp"
+                            android:layout_width="700dp"
+                            android:layout_height="60dp"
                             android:layout_centerHorizontal="true"
                             android:layout_gravity="center"
-                            android:layout_marginTop="35dp"
+                            android:layout_marginTop="50dp"
                             android:layout_weight="1"
                             android:background="@drawable/repeat"
                             android:gravity="center"
