--- a/app/src/main/res/layout/activity_dashboard_screen.xml
+++ b/app/src/main/res/layout/activity_dashboard_screen.xml
@@ -9,7 +9,7 @@
     tools:context=".redirect.DashboardScreen">
 
 
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -111,6 +111,6 @@
 
 
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
