--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -286,7 +286,7 @@
                                 layout="@layout/glucose_layout"
                                 android:visibility="gone" />
 
-                            <android.support.v7.widget.RecyclerView
+                            <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/rv_reading"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
