--- a/app/src/main/res/layout/activity_pulse_oximeter_main.xml
+++ b/app/src/main/res/layout/activity_pulse_oximeter_main.xml
@@ -243,7 +243,7 @@
                 android:orientation="vertical">
 
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/cardview_room1"
                     android:layout_width="400dp"
                     android:layout_height="250dp"
@@ -286,7 +286,7 @@
                     </LinearLayout>
 
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
 
                 <TextView
