--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -32,7 +32,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2">
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_ConnectedDevicesList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
