--- a/app/src/main/res/layout/printpreview.xml
+++ b/app/src/main/res/layout/printpreview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,57 +11,60 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_gravity="center"
+            android:layout_weight="1.5"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/nameTV"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="wrap_content"
+                android:layout_weight="2"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/dobTV"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/pad10"
+                android:layout_weight="1"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="0.8"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/heightTV"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:textColor="@color/white"
                     android:textSize="25sp" />
 
                 <TextView
                     android:id="@+id/genderTV"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/pad10"
+                    android:layout_weight="1"
                     android:textColor="@color/white"
                     android:textSize="25sp" />
             </LinearLayout>
@@ -94,55 +98,69 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/view1"
-        android:background="@android:color/transparent"
-        android:orientation="horizontal"
-        android:padding="@dimen/pad10"
-        android:weightSum="4">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/parameterTV"
-            android:layout_width="0dp"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_VisitedDates"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Parameter"
-            android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:layout_marginTop="@dimen/pad10" />
 
-        <TextView
-            android:id="@+id/resultTV"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Result"
-            android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:layout_marginTop="@dimen/pad10"
+            android:background="@android:color/transparent"
+            android:orientation="horizontal"
+            android:padding="@dimen/pad10"
+            android:weightSum="4">
 
-        <TextView
-            android:id="@+id/valueTV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Current Values"
-            android:textColor="@color/white"
-            android:textSize="25sp" />
+            <TextView
+                android:id="@+id/parameterTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Parameter"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
-        <TextView
-            android:id="@+id/rangeTV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Standard Range"
-            android:textColor="@color/white"
-            android:textSize="25sp" />
+            <TextView
+                android:id="@+id/resultTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Result"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
+            <TextView
+                android:id="@+id/valueTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Current Values"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/rangeTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Standard Range"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -235,5 +253,28 @@
 
 
     </LinearLayout>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_ViewHistoryGraph"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/appBarLayout"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/margin20"
+        android:visibility="gone"
+        app:cardBackgroundColor="#374752"
+        app:cardCornerRadius="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:orientation="vertical">
+
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
 
 </RelativeLayout>
