feature offline stop updation done

--- a/app/src/main/res/menu/activity_login_drawer.xml
+++ b/app/src/main/res/menu/activity_login_drawer.xml
@@ -5,7 +5,8 @@
         <item
             android:id="@+id/nav_offline_sync"
             android:icon="@drawable/sync_contacts"
-            android:title="Offline Data Status" />
+            android:title="Offline Data Status"
+            android:visible="false" />
 
         <item
             android:id="@+id/nav_setting"
