--- a/app/src/main/res/layout/fragment_vision_second.xml
+++ b/app/src/main/res/layout/fragment_vision_second.xml
@@ -7,15 +7,63 @@
     android:background="@color/white"
     tools:context=".fragments.VisionSecondFragment">
 
-    <ImageView
-        android:layout_width="52mm"
-        android:layout_height="48mm"
-        android:src="@drawable/alphabet_f"
-        android:background="@color/transparent"
-        android:layout_centerInParent="true"/>
+    <TextView
+        android:id="@+id/tv_left_vision"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/left_vision"
+        android:textColor="@color/black"
+        android:textSize="35sp" />
 
-    <ImageView
-        android:layout_width="52mm"
-        android:layout_height="48mm" />
+    <RadioButton
+        android:id="@+id/rb_left_vision_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/tv_left_vision"
+        android:layout_marginLeft="80dp"/>
 
+    <TextView
+        android:id="@+id/tv_right_vision"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/right_vision"
+        android:textColor="@color/black"
+        android:textSize="35sp" />
+
+    <RadioButton
+        android:id="@+id/rb_right_vision_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/tv_right_vision"
+        android:layout_marginRight="80dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <ImageView
+            android:layout_width="327dp"
+            android:layout_height="302dp"
+            android:layout_weight="1"
+            android:src="@drawable/alphabet_f"
+            android:layout_centerInParent="true"/>
+
+        <ImageView
+            android:layout_width="327dp"
+            android:layout_height="302dp"
+            android:layout_weight="1"
+            android:src="@drawable/alphabet_p"/>
+
+    </LinearLayout>
 </RelativeLayout>
